@@ -2,6 +2,8 @@
 """
 from zope.interface import Interface
 
+from .adapters.interfaces import ITemporalCoverageAdapter
+
 class IDatasetEnhanced(Interface):
     """ Marker interface for datasets.
     """
@@ -57,3 +59,7 @@ class IEEAFigureFile(Interface):
 class IWorkingList(Interface):
     """ Marker interface for ATTopic
     """
+
+__all__ = [
+    ITemporalCoverageAdapter.__name__
+]
